After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749054 - qtdemux: Fix gst-launch pipeline in the documentation
qtdemux: Fix gst-launch pipeline in the documentation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-07 08:10 UTC by Paul Kim
Modified: 2015-05-08 10:07 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix gst-launch-1.0 command in the description (1.44 KB, patch)
2015-05-07 08:14 UTC, Paul Kim
committed Details | Review

Description Paul Kim 2015-05-07 08:10:44 UTC
The gst-launch script for example launch line to test qtdemux is missing queue before decodebin, so the gst-launch-1.0 command does not work. This patch may help people to get right testing results using the script
Comment 1 Paul Kim 2015-05-07 08:14:57 UTC
Created attachment 303013 [details] [review]
Fix gst-launch-1.0 command in the description
Comment 2 Tim-Philipp Müller 2015-05-08 10:07:31 UTC
Thanks for the patch, pushed:

commit 3792e9ca9bbfca0c4ee8d6fd3e01ef28b2b66de7
Author: Paul Hyunil <paul.hyunil@lge.com>
Date:   Thu May 7 17:10:37 2015 +0900

    qtdemux: fix example pipeline in docs
    
    The gst-launch script for example launch line to test qtdemux is
    missing a queue before the decodebins, otherwise the gst-launch-1.0
    command won't work.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749054